WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310145
[Site Isolation] Fix WKNavigation.HTTPSFirstWithHTTPRedirect
https://bugs.webkit.org/show_bug.cgi?id=310145
Summary
[Site Isolation] Fix WKNavigation.HTTPSFirstWithHTTPRedirect
Sihui Liu
Reported
2026-03-17 16:37:42 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-17 17:08:43 PDT
<
rdar://problem/172786795
>
Sihui Liu
Comment 2
2026-03-17 17:23:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60822
EWS
Comment 3
2026-03-18 09:21:55 PDT
Committed
309483@main
(2a4f2cc364a9): <
https://commits.webkit.org/309483@main
> Reviewed commits have been landed. Closing PR #60822 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug